--- a/style.css
+++ b/style.css
@@ -16,3 +16,12 @@
     top:450px;
     left:400px;
 }
+.thirdDiv{
+    width: 200px;
+    height: 200px;
+    background-color: blue;
+    margin: 0px;
+    position: absolute;
+    top:450px;
+    left:400px;
+}
