--- a/style.css
+++ b/style.css
@@ -144,11 +144,49 @@ main{
 }
 .card{
     display: flex;
+    justify-content: space-between;
     background: linear-gradient(
         to left top,
-        rgba(255, 255, 255, 1),
-        rgba(255, 255, 255, .8)
+        rgba(255, 255, 255, .8),
+        rgba(255, 255, 255, .5)
         );
     border-radius: 1rem;
     margin: 2rem 0rem;
+    padding: 2rem;
+    box-shadow: 6px 6px 20px rgba(122, 122, 122,0.2);
+}
+.progress{
+    background: linear-gradient(
+        to right top,
+        #65dfc9,
+        #6cdbeb
+    );
+    width: 100%;
+    height: 25%;
+    border-radius: 1rem;
+    position:relative;
+    overflow:hidden;
+}
+.progress::after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: rgb(236, 236, 236);
+    position: absolute;
+    left:60%;
+}
+.card-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+}
+.percentage{
+    font-weight: bold;
+    background: linear-gradient(
+        to right top,
+        #65dfc9,
+        #6cdbeb
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color:transparent;
 }
