--- a/style.css
+++ b/style.css
@@ -136,6 +136,9 @@ main{
     padding: 0.5rem;
     border-radius: 2rem;
 }
+.status input:focus{
+    outline:none;
+}
 .games{
     margin: 5rem;
     display: flex;
